# Cardano-node

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  TEMP_REBUILD_RESUME_PLAN.md  bacon.toml  deny.toml  docker-compose.yml  justfile  lefthook.yml  rustfmt.toml
crates/bech32/: AGENTS.md  Cargo.toml
crates/bech32/src/: internal.rs  lib.rs  main.rs  parser.rs
crates/bech32/tests/: cli_help_golden.rs
crates/cardano-cli/: Cargo.toml
crates/cardano-cli/src/: byron.rs  compatible.rs  environment.rs  era_based.rs  era_independent.rs  helper.rs  json.rs  legacy.rs  lib.rs  option.rs  orphan.rs  parser.rs  run.rs
crates/cardano-tracer/: AGENTS.md  Cargo.toml
crates/cardano-tracer/src/: acceptors.rs  configuration.rs  environment.rs  handlers.rs  lib.rs  logging.rs  main.rs  metrics_store.rs  parser.rs  run.rs  severity.rs  time.rs  types.rs  utils.rs
crates/consensus/: AGENTS.md  Cargo.toml
crates/consensus/src/: AGENTS.md  chain_selection.rs  chain_state.rs  diffusion_pipelining.rs  epoch.rs  error.rs  genesis_density.rs  header.rs  in_future.rs  lib.rs  mempool.rs  nonce.rs  ocert.rs  opcert.rs  praos.rs
crates/consensus/tests/: AGENTS.md  integration.rs  mempool_integration.rs
crates/crypto/: AGENTS.md  Cargo.toml
crates/crypto/benches/: blake2b_hash.rs
crates/crypto/src/: AGENTS.md  blake2b.rs  bls12_381.rs  ed25519.rs  error.rs  kes.rs  lib.rs  secp256k1.rs  sha3_hash.rs  sum_kes.rs  test_vectors.rs  vrf.rs
crates/crypto/tests/: AGENTS.md  integration.rs  proptest_kes.rs  upstream_vectors.rs
crates/db-analyser/: AGENTS.md  Cargo.toml
crates/db-analyser/src/: analysis.rs  csv.rs  has_analysis.rs  lib.rs  main.rs  parser.rs  status.rs
crates/db-analyser/tests/: cli_help_golden.rs
crates/db-synthesizer/: AGENTS.md  Cargo.toml
crates/db-synthesizer/src/: lib.rs  main.rs  orphans.rs  parser.rs  status.rs  types.rs
crates/db-synthesizer/tests/: cli_help_golden.rs
crates/dmq-node/: AGENTS.md  Cargo.toml
crates/dmq-node/src/: lib.rs  main.rs  parser.rs  types.rs
crates/dmq-node/tests/: cli_help_golden.rs
crates/error/: AGENTS.md  Cargo.toml
crates/error/src/: lib.rs
crates/kes-agent/: AGENTS.md  Cargo.toml
crates/kes-agent/src/: lib.rs  main.rs  status.rs
crates/ledger/: AGENTS.md  Cargo.toml
crates/ledger/src/: AGENTS.md  cbor.rs  collateral.rs  epoch_boundary.rs  error.rs  fees.rs  lib.rs  min_utxo.rs  native_script.rs  plutus.rs  plutus_validation.rs  protocol_params.rs  rewards.rs  stake.rs  state.rs  tx.rs  types.rs  utxo.rs  witnesses.rs
crates/ledger/tests/: AGENTS.md  generated_intake.rs  integration.rs  proptest_cbor.rs
crates/network/: AGENTS.md  Cargo.toml
crates/network/src/: AGENTS.md  bearer.rs  blockfetch_client.rs  blockfetch_pool.rs  blockfetch_server.rs  chainsync_client.rs  chainsync_server.rs  connection.rs  connection_manager.rs  data_point_acceptor.rs  data_point_forwarder.rs  data_point_run_acceptor.rs  data_point_run_forwarder.rs  diffusion.rs  governor.rs  handshake.rs  inbound_governor.rs  keepalive_client.rs  keepalive_server.rs  ledger_peers_provider.rs  lib.rs  listener.rs  local_listener.rs  local_state_query_client.rs  local_state_query_server.rs  local_tx_monitor_client.rs  local_tx_monitor_server.rs  local_tx_submission_client.rs  local_tx_submission_server.rs  multiplexer.rs  mux.rs  ntc_peer.rs  peer.rs  peer_registry.rs  peer_selection.rs  peer_state_actions.rs  peersharing_client.rs  peersharing_server.rs  protocol_limits.rs  protocol_size_limits.rs  (+7 more)
crates/network/tests/: AGENTS.md  data_point_round_trip.rs  integration.rs
crates/node/block-producer/: AGENTS.md  Cargo.toml
crates/node/config/: AGENTS.md  Cargo.toml
crates/node/genesis/: AGENTS.md  Cargo.toml
crates/node/ntc-server/: AGENTS.md  Cargo.toml
crates/node/ntn-server/: AGENTS.md  Cargo.toml
crates/node/plutus-eval/: AGENTS.md  Cargo.toml
crates/node/runtime/: AGENTS.md  Cargo.toml
crates/node/sync/: AGENTS.md  Cargo.toml
crates/node/tracer/: AGENTS.md  Cargo.toml
crates/node/yggdrasil-node/: AGENTS.md  Cargo.toml
crates/plutus/: AGENTS.md  Cargo.toml
crates/plutus/src/: builtins.rs  cost_model.rs  error.rs  flat.rs  lib.rs  machine.rs  types.rs
crates/plutus/tests/: preview_cost_model_byte_equal.rs  upstream_cost_model.rs
crates/storage/: AGENTS.md  Cargo.toml
crates/storage/src/: AGENTS.md  chain_db.rs  error.rs  file_immutable.rs  file_ledger.rs  file_volatile.rs  immutable_db.rs  ledger_db.rs  lib.rs  ocert_sidecar.rs  volatile_db.rs
crates/storage/tests/: AGENTS.md  integration.rs
crates/telemetry/: AGENTS.md  Cargo.toml
crates/telemetry/src/: haskell_json.rs  lib.rs  otlp.rs
crates/test-fixtures/: AGENTS.md  Cargo.toml
crates/test-fixtures/src/: lib.rs
crates/tx-generator/: AGENTS.md  Cargo.toml
crates/tx-generator/src/: lib.rs  main.rs
node/: AGENTS.md  Cargo.toml
node/configuration/: AGENTS.md
node/configuration/mainnet/: AGENTS.md  peer-snapshot.json
node/configuration/preprod/: AGENTS.md  peer-snapshot.json  topology.json
node/configuration/preview/: AGENTS.md  peer-snapshot.json
node/scripts/: backup_db.sh  check_upstream_drift.sh  compare_db_truncater_to_upstream.sh  compare_submit_api_to_upstream.sh  compare_tip_to_haskell.sh  healthcheck.sh  install_from_release.sh  parallel_blockfetch_soak.sh  preview_producer_harness.sh  restart_resilience.sh  run-tools.sh  run_mainnet_real_pool_producer.sh
node/src/: AGENTS.md  block_producer.rs  blockfetch_worker.rs  chainsync_worker.rs  cli.rs  commands.rs  config.rs  genesis.rs  handlers.rs  ledger_peers.rs  lib.rs  local_server.rs  main.rs  main_tests.rs  metrics_server.rs  path_resolve.rs  plutus_eval.rs  run_node.rs  runtime.rs  server.rs  startup.rs  sync.rs  trace_forwarder.rs  tracer.rs  upstream_pins.rs
node/src/commands/: cardano_cli.rs  configuration.rs  query.rs  run.rs  status.rs  (+3 more)
node/tests/: AGENTS.md  local_ntc.rs  preview_cost_model_byte_equal.rs  runtime.rs  smoke.rs  sync.rs
xtask/: AGENTS.md  Cargo.toml
xtask/src/: main.rs
(+1718 files in other folders)
