[workspace]
members = [
    # ──────────────────────────────────────────────────────────────────
    # Core crates — foundational subsystems mirroring upstream
    # cardano-base / cardano-ledger / ouroboros-consensus /
    # ouroboros-network / plutus packages. Dependency direction is
    # strictly downward through this list (see docs/ARCHITECTURE.md).
    # ──────────────────────────────────────────────────────────────────
    "crates/crypto",
    "crates/ledger",
    "crates/storage",
    "crates/consensus",
    "crates/network",
    "crates/plutus",

    # ──────────────────────────────────────────────────────────────────
    # cardano-cli — pure-Rust port of the upstream operator CLI
    # (~237 mirror files; ~3.9 KLOC). Library consumed by yggdrasil-node
    # plus the eventual standalone binary. C-arc parallel port runs its
    # own R-numbering and gates Phase C of the sister-tools plan.
    # ──────────────────────────────────────────────────────────────────
    "crates/cardano-cli",

    # ──────────────────────────────────────────────────────────────────
    # Main node binary — orchestration layer wrapping the core crates.
    # ──────────────────────────────────────────────────────────────────
    "node",

    # ──────────────────────────────────────────────────────────────────
    # Tier 1 sister tools — deployment-essential SPO operations
    # (R331-R385 arc). bech32 closeout shipped at R334.
    # ──────────────────────────────────────────────────────────────────
    "crates/bech32",                # R334 verified_11_0_1
    "crates/cardano-submit-api",    # partial — R338-R345 implementation arc
    "crates/kes-agent",             # skeleton — R344+ HIGHEST-STAKES (gated on socket-protocol fixture capture)
    "crates/kes-agent-control",     # partial — R355-R359 typed-config + R362+R370 typed-parser + env-var derivation
    "crates/cardano-tracer",        # partial — R358+R366+R371+R379-R391 deep port arc

    # ──────────────────────────────────────────────────────────────────
    # Tier 2 sister tools — operator forensics + maintenance
    # (R386-R407 arc).
    # ──────────────────────────────────────────────────────────────────
    "crates/db-truncater",          # partial — R347-R350 implementation arc
    "crates/db-analyser",           # partial — R351+R365+R372-R376 typed-config + CSV + HasAnalysis + BenchmarkLedgerOps
    "crates/snapshot-converter",    # partial — R353+R363 typed-config + typed-parser

    # ──────────────────────────────────────────────────────────────────
    # Tier 3 sister tools — testing + benchmarking
    # (R408-R449 arc; HARD-GATED on cardano-cli C-arc CLI-MVS).
    # ──────────────────────────────────────────────────────────────────
    "crates/db-synthesizer",        # partial — R354+R364+R378 typed-config + typed-parser + Orphans
    "crates/cardano-testnet",       # partial — R359+R367 typed-config + typed-parser
    "crates/tx-generator",          # skeleton — Phase C entry-gated on CLI-MVS at R408+

    # ──────────────────────────────────────────────────────────────────
    # Tier 4 sister project — Delegated Mempool Queue
    # (R450-R459 arc).
    # ──────────────────────────────────────────────────────────────────
    "crates/dmq-node",              # partial — R356+R361+R369 typed-config + typed-parser + config-file load
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.95"
version = "0.2.0"
# Workspace crates are not published to crates.io. The release artefact
# is the `yggdrasil-node` binary tarball published from .github/workflows/release.yml.
# Marking every crate `publish = false` lets `cargo deny`'s
# `allow-wildcard-paths = true` apply (crates.io rejects path-only deps
# in published crates, so the gate only ever exempts private crates).
publish = false

[workspace.dependencies]
blake2 = "0.10.6"
bls12_381 = { version = "0.8", default-features = true, features = ["experimental"] }
curve25519-dalek = { version = "4.1.3", default-features = true }
curve25519-elligator2 = { version = "0.1.0-alpha.2", default-features = true, features = ["digest"] }
ed25519-dalek = { version = "2.1.1", default-features = true }
clap = { version = "4.6", features = ["derive", "env"] }
eyre = "0.6.12"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0"
# `serde_yaml` (advisory-db #2132) and the original drop-in `serde_yml`
# (RUSTSEC-2025-0068, archived for unsoundness) are both unmaintained.
# `serde_norway` is the actively-maintained fork of `serde_yaml`,
# tracking the same Serde-compatible API. Audit M-5.
serde_norway = "0.9"
# Replaces unmaintained `serde_cbor` (RUSTSEC-2021-0127) for the
# trace-forwarder Unix-socket egress.  `ciborium` is the upstream-
# recommended successor (Serde-compatible, RFC 8949).  Audit M-4.
ciborium = "0.2"
# Retained transitionally for the on-disk storage block format only.
# Replacement requires a byte-equivalence migration of existing nodes'
# volatile/immutable DBs and is tracked separately. Audit M-4 (partial).
serde_cbor = "0.11"
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "schnorr", "std"] }
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
hex = "0.4"
ripemd = "0.2"
sha2 = "0.11.0"
sha3 = "0.11"
subtle = "2.6.1"
thiserror = "2.0.12"
zeroize = { version = "1.8.2", features = ["derive"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util", "signal", "fs"] }
# R403 audit (R398 plan D1): SMTP client for cardano-tracer
# Notifications/Email::sendEmail. Pinned to rustls-only to avoid the
# default `tokio1-native-tls` feature which would pull in `native-tls`
# blocked by `deny.toml:90`. ~30 transitive deps; MIT/Apache-2.0
# dual-licensed; pure Rust.
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls", "ring", "webpki-roots", "builder"] }
# R406 audit (R398 plan D2-prime): compile-time HTML templating for
# RouteDictionary::render_html. Zero transitive deps (proc-macro only).
# License: MIT.
maud = "0.27"
# R408 audit (R398 plan D2 main): HTTP server stack for cardano-tracer
# Metrics/{Prometheus, Monitoring, TimeseriesServer, Servers}. Pinned
# default-features = false to avoid pulling in `native-tls` blocked by
# `deny.toml:90`. License: all MIT.
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
rustls-pemfile = "2"
# R330 — pure-Rust BIP-0173 / Bech32m encoding from rust-bitcoin/rust-bech32.
# MIT-licensed, zero transitive deps. Foundation for `crates/bech32/`
# (R331-R334 file-mirror skeleton + functional implementation), which
# replicates the upstream IntersectMBO/bech32 binary's CLI surface
# byte-for-byte.
bech32 = "0.11"
# R333 — pure-Rust Base58 codec from `Nullus157/bs58-rs`.  MIT/Apache-2.0,
# zero transitive deps under `default = ["std"]`.  Used by `crates/bech32/`
# to mirror upstream's Base58 input-encoding detection (Cardano legacy
# Byron address parsing path).
bs58 = "0.5"

yggdrasil-cardano-cli = { path = "crates/cardano-cli" }
yggdrasil-consensus = { path = "crates/consensus" }
yggdrasil-crypto = { path = "crates/crypto" }
yggdrasil-ledger = { path = "crates/ledger" }
yggdrasil-network = { path = "crates/network" }
yggdrasil-plutus = { path = "crates/plutus" }
yggdrasil-storage = { path = "crates/storage" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
# --- Lints introduced in Rust 1.95 that we explicitly carry forward as
# `allow` rather than fix in this toolchain-bump PR.  Each is tracked
# in CHANGELOG / AGENTS as deferred work; revisit when the let-chain
# refactor and the LedgerError boxing are scheduled.
#
# `collapsible_if`: 1.95 added let-chains; rewriting ~78 nested `if let
# Some(x) = … { if y { … } }` into `if let Some(x) = … && y { … }` is
# pure style churn against the audit-validated baseline.  Defer.
collapsible_if = "allow"
# `result_large_err` + `large_enum_variant`: `LedgerError` carries
# ~100 variants reflecting upstream `cardano-ledger`'s `PredicateFailure`
# zoo.  Boxing the largest variants would touch ~180 call sites in
# production and tests.  Worth doing as a focused PR with parity
# verification, not as a side effect of a toolchain bump.
result_large_err = "allow"
large_enum_variant = "allow"

[profile.dev.package.yggdrasil-crypto]
opt-level = 3

[profile.test.package.yggdrasil-crypto]
opt-level = 3
