[workspace]
members = [
    # ──────────────────────────────────────────────────────────────────
    # Core crates — foundational subsystems mirroring upstream
    # cardano-base / cardano-ledger / ouroboros-consensus /
    # ouroboros-network / plutus packages. Dependency direction is
    # strictly downward through this list (see docs/ARCHITECTURE.md).
    # ──────────────────────────────────────────────────────────────────
    "crates/crypto",
    "crates/ledger",
    "crates/storage",
    "crates/consensus",
    "crates/network",
    "crates/plutus",

    # ──────────────────────────────────────────────────────────────────
    # Shared infra crates — workspace-wide scaffolding (Wave 2 PR 4).
    # Each is a single-purpose synthesis crate; the `## Naming parity`
    # docstring blocks declare them as non-mirrors and the
    # `docs/strict-mirror-audit.tsv` allowlist carries the
    # `(c) NO_MIRROR_NEEDS_DOCSTRING` verdicts.
    # ──────────────────────────────────────────────────────────────────
    "crates/error",                            # cross-crate YggdrasilError envelope
    "crates/telemetry",                        # tracing + Haskell-JSON formatter
    "crates/test-fixtures",                    # dev-deps-only shared scaffolding
    "crates/observability/yggdrasil-metrics",  # Wave 6 PR 16 EKG-parity Prometheus registry

    # ──────────────────────────────────────────────────────────────────
    # Main node binary — orchestration layer wrapping the core crates.
    # The source directory uses upstream package naming (`cardano-node`)
    # while the Cargo package and shipped binary remain `yggdrasil-node`
    # for release compatibility.
    # ──────────────────────────────────────────────────────────────────
    "crates/node/cardano-node",
    # Wave 5 sub-crate extractions — runtime logic split out of the binary
    # crate. Listed explicitly so workspace membership does not depend on
    # them remaining path-dependencies of `yggdrasil-node`.
    "crates/node/block-producer",
    "crates/node/config",
    "crates/node/genesis",
    "crates/node/ntc-server",
    "crates/node/ntn-server",
    "crates/node/plutus-eval",
    "crates/node/runtime",
    "crates/node/sync",
    "crates/node/tracer",

    # ──────────────────────────────────────────────────────────────────
    # Sister tools — operator binaries / SPO tooling, organized under
    # crates/tools/ as a single group (R447 restructure). Each remains
    # its own workspace crate with its own Cargo.toml / binary target /
    # AGENTS.md; the crates/tools/ grouping captures their shared role
    # (operator-facing binaries) vs the runtime core above.
    # ──────────────────────────────────────────────────────────────────

    # cardano-cli — pure-Rust port of the upstream operator CLI
    # (~237 mirror files; ~3.9 KLOC). Library consumed by yggdrasil-node
    # plus the standalone binary. The C-arc is closed; downstream tools
    # now depend on their own parser/runtime ports and comparison evidence.
    "crates/tools/cardano-cli",

    # Tier 1 sister tools — deployment-essential SPO operations
    # (R331-R385 historical arc; current evidence tracked in the parity matrix).
    "crates/tools/bech32",                # R335 verified_11_0_1
    "crates/tools/cardano-submit-api",    # implemented_needs_11_0_1_evidence — R825+ operator soak remains
    "crates/tools/kes-agent",             # partial — R443 deferral; R444+ daemon/socket follow-on
    "crates/tools/kes-agent-control",     # partial — R440 deferral; awaits R444+ daemon/socket follow-on
    "crates/tools/cardano-tracer",        # partial — R474 DataPoint smoke; EKG/RTView carve-outs remain

    # Tier 2 sister tools — operator forensics + maintenance
    # (R386-R407 historical arc; current evidence tracked in the parity matrix).
    "crates/tools/db-truncater",          # implemented_needs_11_0_1_evidence — R351 upstream soak
    "crates/tools/db-analyser",           # partial — R497 ReproMempoolAndForge remains
    "crates/tools/snapshot-converter",    # partial — R447 LedgerStore conversion pending

    # Tier 3 sister tools — testing + benchmarking
    # (R408-R449 historical arc; current follow-ons continue in A4).
    "crates/tools/db-synthesizer",        # implemented_needs_11_0_1_evidence — R533 upstream soak
    "crates/tools/cardano-testnet",       # partial — R826 runtime carriers; node spawning/era-genesis pending
    "crates/tools/tx-generator",          # partial — R591 DumpToFile/submission arc still open

    # Tier 4 sister project — Delegated Mempool Queue
    # (R450-R459 historical arc; runtime follow-ons continue).
    "crates/tools/dmq-node",              # partial — R816 pure logic; runtime event-loop pending

    # ──────────────────────────────────────────────────────────────────
    # Developer subcommands (Wave 9 PR 27). Invoked via the
    # `.cargo/config.toml` alias `cargo xtask = "run -p xtask --release --"`.
    # ──────────────────────────────────────────────────────────────────
    "xtask",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.95"
version = "0.2.0"
repository = "https://github.com/Yggdrasil-node/Cardano-node"
homepage = "https://yggdrasil-node.github.io/Cardano-node/"
authors = ["Yggdrasil contributors"]
# Workspace crates are not published to crates.io. The release artefact
# is the `yggdrasil-node` binary tarball published from .github/workflows/release.yml.
# Marking every crate `publish = false` lets `cargo deny`'s
# `allow-wildcard-paths = true` apply (crates.io rejects path-only deps
# in published crates, so the gate only ever exempts private crates).
publish = false

# Workspace-level parity metadata. Consumed by `xtask` (Wave 9 PR 27)
# and by tooling that needs to locate the parity surfaces without
# hardcoding paths. Schema version is bumped when the JSON shape of
# `docs/parity-matrix.json` changes.
[workspace.metadata.parity]
matrix = "docs/parity-matrix.json"
strict-mirror-audit = "docs/strict-mirror-audit.tsv"
schema-version = 1

[workspace.dependencies]
blake2 = "0.10.6"
bls12_381 = { version = "0.8", default-features = true, features = ["experimental"] }
curve25519-dalek = { version = "4.1.3", default-features = true }
curve25519-elligator2 = { version = "0.1.0-alpha.2", default-features = true, features = ["digest"] }
ed25519-dalek = { version = "2.1.1", default-features = true }
clap = { version = "4.6", features = ["derive", "env"] }
eyre = "0.6.12"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0"
# `serde_yaml` (advisory-db #2132) and the original drop-in `serde_yml`
# (RUSTSEC-2025-0068, archived for unsoundness) are both unmaintained.
# `serde_norway` is the actively-maintained fork of `serde_yaml`,
# tracking the same Serde-compatible API. Audit M-5.
serde_norway = "0.9"
# Replaces unmaintained `serde_cbor` (RUSTSEC-2021-0127) for the
# trace-forwarder Unix-socket egress.  `ciborium` is the upstream-
# recommended successor (Serde-compatible, RFC 8949).  Audit M-4.
ciborium = "0.2"
# Retained transitionally for the on-disk storage block format only.
# Replacement requires a byte-equivalence migration of existing nodes'
# volatile/immutable DBs and is tracked separately. Audit M-4 (partial).
serde_cbor = "0.11"
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "schnorr", "std"] }
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
hex = "0.4"
getrandom = "0.3"
ripemd = "0.2"
sha2 = "0.11.0"
sha3 = "0.11"
subtle = "2.6.1"
thiserror = "2.0.12"
zeroize = { version = "1.8.2", features = ["derive"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util", "signal", "fs"] }
# R403 audit (R398 plan D1): SMTP client for cardano-tracer
# Notifications/Email::sendEmail. Pinned to rustls-only to avoid the
# default `tokio1-native-tls` feature which would pull in `native-tls`
# blocked by `deny.toml:90`. ~30 transitive deps; MIT/Apache-2.0
# dual-licensed; pure Rust.
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls", "ring", "webpki-roots", "builder"] }
# R406 audit (R398 plan D2-prime): compile-time HTML templating for
# RouteDictionary::render_html. Zero transitive deps (proc-macro only).
# License: MIT.
maud = "0.27"
# R408 audit (R398 plan D2 main): HTTP server stack for cardano-tracer
# Metrics/{Prometheus, Monitoring, TimeseriesServer, Servers}. Pinned
# default-features = false to avoid pulling in `native-tls` blocked by
# `deny.toml:90`. License: all MIT.
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
rustls-pemfile = "2"
# R468/R840 audit: TLS-terminated HTTP server for cardano-tracer Prometheus/
# Monitoring endpoints when operator config has `force_ssl: true`.
# Pinned `default-features = false, features = ["tls-rustls-no-provider"]`
# so rustls does not enable its default AWS-LC provider path. The
# workspace-level `rustls` dependency below installs the explicit `ring`
# provider at runtime.
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
# R468 audit: rustls 0.23 requires the application to install a
# CryptoProvider explicitly before ServerConfig::builder. Yggdrasil
# picks `ring` (license-clarified in deny.toml — MIT AND ISC AND
# OpenSSL) over `aws-lc-rs` (which pulls `aws-lc-sys` C bindings,
# against Yggdrasil's no-FFI policy spirit). Pulled directly here
# so cardano-tracer's `serve_router_with_tls` can call
# `rustls::crypto::ring::default_provider().install_default()`.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
# R330 — pure-Rust BIP-0173 / Bech32m encoding from rust-bitcoin/rust-bech32.
# MIT-licensed, zero transitive deps. Foundation for `crates/tools/bech32/`
# (R331-R334 file-mirror skeleton + functional implementation; R447
# relocated under `crates/tools/`), which replicates the upstream
# IntersectMBO/bech32 binary's CLI surface byte-for-byte.
bech32 = "0.11"
# R333 — pure-Rust Base58 codec from `Nullus157/bs58-rs`.  MIT/Apache-2.0,
# zero transitive deps under `default = ["std"]`.  Used by `crates/tools/bech32/`
# (R447 relocated) to mirror upstream's Base58 input-encoding detection
# (Cardano legacy Byron address parsing path).
bs58 = "0.5"
# Wave 6 PR 14: tracing facade + subscriber. `tracing` itself is a
# small no-deps crate; `tracing-subscriber` pulls in `sharded-slab`
# `thread_local` `tracing-core` `tracing-log` and the JSON formatter
# dependencies. `default-features = false` + an explicit feature list
# keeps the build narrow and the `cargo deny check` audit posture
# unchanged (no proc-macro or async-runtime additions).
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "env-filter", "json", "registry", "smallvec", "tracing-log"] }
# Wave 6 PR 17 (Phase 2.A) — OTLP forwarder layer for the
# `--log-format=otel` / `--otlp-endpoint=...` operator surface. The
# OpenTelemetry crates are explicitly NOT pulled into default
# tracing-subscriber init paths; only `yggdrasil-telemetry` opts in
# and only the OTLP code path constructs them. `grpc-tonic` is the
# wire protocol; `rt-tokio` lets the exporter span its own tokio
# runtime when invoked from a Tokio context. `reqwest-client` is
# avoided since the workspace already uses tonic for its gRPC needs.
opentelemetry = { version = "0.26", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.26", default-features = false, features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.26", default-features = false, features = ["trace", "grpc-tonic", "tls", "tls-roots"] }
tracing-opentelemetry = { version = "0.27", default-features = false, features = ["tracing-log"] }
# Wave 6 PR 16 — Prometheus metrics façade. `metrics` is a small
# facade crate (zero-cost when no recorder is installed);
# `metrics-exporter-prometheus` provides the HTTP scrape endpoint.
# Pinned `default-features = false` to keep the audit-time
# transitive footprint narrow.
metrics = { version = "0.24", default-features = false }
metrics-exporter-prometheus = { version = "0.17", default-features = false, features = ["http-listener"] }

yggdrasil-cardano-cli = { path = "crates/tools/cardano-cli" }
yggdrasil-consensus = { path = "crates/consensus" }
yggdrasil-crypto = { path = "crates/crypto" }
yggdrasil-error = { path = "crates/error" }
yggdrasil-ledger = { path = "crates/ledger" }
yggdrasil-network = { path = "crates/network" }
yggdrasil-node-block-producer = { path = "crates/node/block-producer" }
yggdrasil-node-config = { path = "crates/node/config" }
yggdrasil-node-genesis = { path = "crates/node/genesis" }
yggdrasil-metrics = { path = "crates/observability/yggdrasil-metrics" }
yggdrasil-node-ntc-server = { path = "crates/node/ntc-server" }
yggdrasil-node-ntn-server = { path = "crates/node/ntn-server" }
yggdrasil-node-plutus-eval = { path = "crates/node/plutus-eval" }
# Phase 5.1 forge feature flag: the workspace dep entry sets
# default-features = false so consumers (ntc-server, ntn-server)
# can opt in/out of the runtime's `forge` feature independently.
# The binary opts INTO forge via its own `forge` feature
# (`yggdrasil-node-runtime/forge`); ntc-server / ntn-server leave it
# off because they only consume non-forge runtime surface.
yggdrasil-node-runtime = { path = "crates/node/runtime", default-features = false }
yggdrasil-node-sync = { path = "crates/node/sync" }
yggdrasil-node-tracer = { path = "crates/node/tracer" }
yggdrasil-plutus = { path = "crates/plutus" }
yggdrasil-storage = { path = "crates/storage" }
yggdrasil-telemetry = { path = "crates/telemetry" }
yggdrasil-test-fixtures = { path = "crates/test-fixtures" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
# --- Lints introduced in Rust 1.95 that we explicitly carry forward as
# `allow` rather than fix in this toolchain-bump PR.  Each is tracked
# in CHANGELOG / AGENTS as deferred work; revisit when the let-chain
# refactor and the LedgerError boxing are scheduled.
#
# `collapsible_if`: 1.95 added let-chains; rewriting ~78 nested `if let
# Some(x) = … { if y { … } }` into `if let Some(x) = … && y { … }` is
# pure style churn against the audit-validated baseline.  Defer.
collapsible_if = "allow"
# `result_large_err` + `large_enum_variant`: `LedgerError` carries
# ~100 variants reflecting upstream `cardano-ledger`'s `PredicateFailure`
# zoo.  Boxing the largest variants would touch ~180 call sites in
# production and tests.  Worth doing as a focused PR with parity
# verification, not as a side effect of a toolchain bump.
result_large_err = "allow"
large_enum_variant = "allow"

# ──────────────────────────────────────────────────────────────────────
# Build profiles.
#
# `release` is the default-shipped profile. `release-debug` keeps full
# debuginfo for stack-walk forensics during operator soak runs without
# losing the optimised codegen. `dist` is the profile used by
# .github/workflows/release.yml for shipped tarballs — codegen-units=1
# + fat LTO trade extra build time for smaller / faster binaries.
# `bench` mirrors release while keeping line-tables-only debuginfo so
# perf samples resolve to function names.
# ──────────────────────────────────────────────────────────────────────
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
panic = "abort"
strip = "debuginfo"
debug = "line-tables-only"
incremental = false

[profile.release-debug]
inherits = "release"
debug = "full"
strip = "none"
split-debuginfo = "packed"

[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.bench]
inherits = "release"
debug = "line-tables-only"
lto = "thin"

# ──────────────────────────────────────────────────────────────────────
# Crypto opt-level overrides — keep test/dev cycles fast by compiling
# the inner-loop crypto crates at -O3 even under `dev`/`test`. The
# yggdrasil-crypto override was the original; the additional package
# overrides cut down KES/VRF/BLS-heavy test runtimes.
# ──────────────────────────────────────────────────────────────────────
[profile.dev.package.yggdrasil-crypto]
opt-level = 3

[profile.test.package.yggdrasil-crypto]
opt-level = 3

[profile.dev.package.blake2]
opt-level = 3

[profile.dev.package.bls12_381]
opt-level = 3

[profile.dev.package.ed25519-dalek]
opt-level = 3

[profile.dev.package.curve25519-dalek]
opt-level = 3

[profile.dev.package.sha2]
opt-level = 3
