[package]
name = "yggdrasil-node"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
eyre.workspace = true
thiserror.workspace = true
tokio.workspace = true
yggdrasil-consensus.workspace = true
yggdrasil-ledger.workspace = true
yggdrasil-mempool.workspace = true
yggdrasil-network.workspace = true
yggdrasil-storage.workspace = true

[lints]
workspace = true
