[package]
name = "yggdrasil-node"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
yggdrasil-consensus.workspace = true
yggdrasil-crypto.workspace = true
yggdrasil-ledger.workspace = true
yggdrasil-mempool.workspace = true
yggdrasil-plutus.workspace = true
yggdrasil-network.workspace = true
yggdrasil-storage.workspace = true

[lints]
workspace = true
