[package]
name = "xtask"
description = "Workspace developer subcommands. Invoked via `cargo xtask <cmd>` (alias in .cargo/config.toml from Wave 1 PR 3)."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
clap.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
