[package]
name = "yggdrasil-consensus"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
num-bigint.workspace = true
num-integer.workspace = true
num-traits.workspace = true
thiserror.workspace = true
yggdrasil-crypto.workspace = true
yggdrasil-ledger.workspace = true

[dev-dependencies]
tempfile = "3"
yggdrasil-storage = { path = "../storage" }

[lints]
workspace = true
