[package]
name = "yggdrasil-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
blake2.workspace = true
curve25519-dalek.workspace = true
curve25519-elligator2.workspace = true
ed25519-dalek.workspace = true
k256.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[lints]
workspace = true
