[package]
name = "yggdrasil-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
blake2.workspace = true
bls12_381.workspace = true
curve25519-dalek.workspace = true
curve25519-elligator2.workspace = true
ed25519-dalek.workspace = true
k256.workspace = true
sha2.workspace = true
sha3.workspace = true
# bls12_381 0.8's hash-to-curve needs digest 0.9-compatible SHA-256.
sha2_09 = { package = "sha2", version = "0.9" }
subtle.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[lints]
workspace = true

# Wave 9 PR 28: criterion benchmarks for the hashing hot path. Run via
# `cargo bench -p yggdrasil-crypto --bench blake2b_hash`. The bench
# scaffold is intentionally small (one bench file, three sizes) — the
# goal is to establish the infrastructure so future hot-path work has
# a regression-checking surface.
[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
# Wave 9 PR 28 follow-on: proptest property-based tests covering the
# Sum-KES sign/verify roundtrip across all evolution levels. Pinned at
# 1.x (default-features stay enabled so the test reporter works).
proptest = { version = "1.7", default-features = false, features = ["std"] }

[[bench]]
name = "blake2b_hash"
harness = false

