[package]
name = "yggdrasil-db-synthesizer"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false
description = "Pure-Rust port of the upstream db-synthesizer synthetic chain generator."

# R327 skeleton — bootstrap of the db-synthesizer sister-tool crate per the
# R326–R459 sister-tools port arc plan.
# Upstream source vendored at:
# .reference-haskell-cardano-node/deps/ouroboros-consensus/ouroboros-consensus-cardano/src/unstable-cardano-tools/Cardano/Tools/DBSynthesizer/

[lints]
workspace = true

[lib]
name = "yggdrasil_db_synthesizer"
path = "src/lib.rs"

[[bin]]
name = "db-synthesizer"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
eyre = { workspace = true }
